# Copyright 2020 The Brave Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# See 'chrome/android/chrome_java_resources.gni' on how to generate this list
brave_java_resources = [
  "java/res/anim/activity_fade_in.xml",
  "java/res/anim/activity_fade_out.xml",
  "java/res/anim/cycle.xml",
  "java/res/anim/shake.xml",
  "java/res/drawable-hdpi/add_funds.png",
  "java/res/drawable-hdpi/bat_logo.png",
  "java/res/drawable-hdpi/bat_unverified.png",
  "java/res/drawable-hdpi/bat_verified.png",
  "java/res/drawable-hdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-hdpi/brave_sync.png",
  "java/res/drawable-hdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-hdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-hdpi/btn_bat.png",
  "java/res/drawable-hdpi/btn_bookmark.png",
  "java/res/drawable-hdpi/btn_bookmark_fill.png",
  "java/res/drawable-hdpi/btn_brave.png",
  "java/res/drawable-hdpi/btn_brave_off.png",
  "java/res/drawable-hdpi/btn_delete_24dp.png",
  "java/res/drawable-hdpi/btn_info.png",
  "java/res/drawable-hdpi/btn_left.png",
  "java/res/drawable-hdpi/btn_mic.png",
  "java/res/drawable-hdpi/btn_right.png",
  "java/res/drawable-hdpi/btn_right_tablet.png",
  "java/res/drawable-hdpi/btn_star.png",
  "java/res/drawable-hdpi/btn_star_filled.png",
  "java/res/drawable-hdpi/btn_suggestion_refine.png",
  "java/res/drawable-hdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-hdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-hdpi/btn_toolbar_home.png",
  "java/res/drawable-hdpi/btn_toolbar_reload.png",
  "java/res/drawable-hdpi/camera.png",
  "java/res/drawable-hdpi/changetip_icon.png",
  "java/res/drawable-hdpi/check.png",
  "java/res/drawable-hdpi/checkbox.png",
  "java/res/drawable-hdpi/checkbox_checked.png",
  "java/res/drawable-hdpi/chevron_right.png",
  "java/res/drawable-hdpi/chromelogo16.png",
  "java/res/drawable-hdpi/coin_stack.png",
  "java/res/drawable-hdpi/coins.png",
  "java/res/drawable-hdpi/contribute_icon.png",
  "java/res/drawable-hdpi/copy_paste.png",
  "java/res/drawable-hdpi/cover_photo.png",
  "java/res/drawable-hdpi/disclosure.png",
  "java/res/drawable-hdpi/down_arrow.png",
  "java/res/drawable-hdpi/duckduckgo.png",
  "java/res/drawable-hdpi/ecosia.png",
  "java/res/drawable-hdpi/grant_icon.png",
  "java/res/drawable-hdpi/group.png",
  "java/res/drawable-hdpi/header.png",
  "java/res/drawable-hdpi/ic_chrome.png",
  "java/res/drawable-hdpi/ic_cross_modal.png",
  "java/res/drawable-hdpi/ic_delete_white_24dp.png",
  "java/res/drawable-hdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-hdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-hdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-hdpi/icn_frowning_face.png",
  "java/res/drawable-hdpi/icn_twitch.png",
  "java/res/drawable-hdpi/icn_twitter.png",
  "java/res/drawable-hdpi/icn_unverified_alert.png",
  "java/res/drawable-hdpi/icn_youtube.png",
  "java/res/drawable-hdpi/icon_close_notification.png",
  "java/res/drawable-hdpi/icon_error_notification.png",
  "java/res/drawable-hdpi/icon_validated_notification.png",
  "java/res/drawable-hdpi/icon_warning_notification.png",
  "java/res/drawable-hdpi/incognito_simple.png",
  "java/res/drawable-hdpi/incognito_splash.png",
  "java/res/drawable-hdpi/location_bar_incognito_badge.png",
  "java/res/drawable-hdpi/modern_location_bar.9.png",
  "java/res/drawable-hdpi/notification_header.png",
  "java/res/drawable-hdpi/notification_header_error.png",
  "java/res/drawable-hdpi/notification_header_normal.png",
  "java/res/drawable-hdpi/notification_header_warning.png",
  "java/res/drawable-hdpi/notification_icon.png",
  "java/res/drawable-hdpi/omnibox_https_valid.png",
  "java/res/drawable-hdpi/plane_small.png",
  "java/res/drawable-hdpi/plus.png",
  "java/res/drawable-hdpi/qrcode_dark.png",
  "java/res/drawable-hdpi/qrcode_light.png",
  "java/res/drawable-hdpi/rewards_settings.png",
  "java/res/drawable-hdpi/search_engine_bing.png",
  "java/res/drawable-hdpi/search_engine_duckduckgo.png",
  "java/res/drawable-hdpi/search_engine_google.png",
  "java/res/drawable-hdpi/search_engine_qwant.png",
  "java/res/drawable-hdpi/search_engine_startpage.png",
  "java/res/drawable-hdpi/settings_desktop_mode.png",
  "java/res/drawable-hdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-hdpi/share_activity_background.png",
  "java/res/drawable-hdpi/share_icon.png",
  "java/res/drawable-hdpi/shortcut_incognito.png",
  "java/res/drawable-hdpi/slide_down.png",
  "java/res/drawable-hdpi/slide_up.png",
  "java/res/drawable-hdpi/smiley_happy.png",
  "java/res/drawable-hdpi/smiley_neutral.png",
  "java/res/drawable-hdpi/smiley_sad.png",
  "java/res/drawable-hdpi/uphold_green.png",
  "java/res/drawable-hdpi/uphold_white.png",
  "java/res/drawable-hdpi/verified_creator_large.png",
  "java/res/drawable-hdpi/verified_disclosure.png",
  "java/res/drawable-hdpi/yandex.png",
  "java/res/drawable-mdpi/add_funds.png",
  "java/res/drawable-mdpi/bat_logo.png",
  "java/res/drawable-mdpi/bat_unverified.png",
  "java/res/drawable-mdpi/bat_verified.png",
  "java/res/drawable-mdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-mdpi/brave_sync.png",
  "java/res/drawable-mdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-mdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-mdpi/btn_bat.png",
  "java/res/drawable-mdpi/btn_bookmark.png",
  "java/res/drawable-mdpi/btn_bookmark_fill.png",
  "java/res/drawable-mdpi/btn_brave.png",
  "java/res/drawable-mdpi/btn_brave_off.png",
  "java/res/drawable-mdpi/btn_delete_24dp.png",
  "java/res/drawable-mdpi/btn_info.png",
  "java/res/drawable-mdpi/btn_left.png",
  "java/res/drawable-mdpi/btn_mic.png",
  "java/res/drawable-mdpi/btn_right.png",
  "java/res/drawable-mdpi/btn_right_tablet.png",
  "java/res/drawable-mdpi/btn_star.png",
  "java/res/drawable-mdpi/btn_star_filled.png",
  "java/res/drawable-mdpi/btn_suggestion_refine.png",
  "java/res/drawable-mdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-mdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-mdpi/btn_toolbar_home.png",
  "java/res/drawable-mdpi/btn_toolbar_reload.png",
  "java/res/drawable-mdpi/camera.png",
  "java/res/drawable-mdpi/changetip_icon.png",
  "java/res/drawable-mdpi/check.png",
  "java/res/drawable-mdpi/checkbox.png",
  "java/res/drawable-mdpi/checkbox_checked.png",
  "java/res/drawable-mdpi/chevron_right.png",
  "java/res/drawable-mdpi/chromelogo16.png",
  "java/res/drawable-mdpi/coin_stack.png",
  "java/res/drawable-mdpi/coins.png",
  "java/res/drawable-mdpi/contribute_icon.png",
  "java/res/drawable-mdpi/copy_paste.png",
  "java/res/drawable-mdpi/cover_photo.png",
  "java/res/drawable-mdpi/disclosure.png",
  "java/res/drawable-mdpi/down_arrow.png",
  "java/res/drawable-mdpi/duckduckgo.png",
  "java/res/drawable-mdpi/ecosia.png",
  "java/res/drawable-mdpi/grant_icon.png",
  "java/res/drawable-mdpi/group.png",
  "java/res/drawable-mdpi/header.png",
  "java/res/drawable-mdpi/ic_chrome.png",
  "java/res/drawable-mdpi/ic_cross_modal.png",
  "java/res/drawable-mdpi/ic_delete_white_24dp.png",
  "java/res/drawable-mdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-mdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-mdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-mdpi/icn_frowning_face.png",
  "java/res/drawable-mdpi/icn_twitch.png",
  "java/res/drawable-mdpi/icn_twitter.png",
  "java/res/drawable-mdpi/icn_unverified_alert.png",
  "java/res/drawable-mdpi/icn_youtube.png",
  "java/res/drawable-mdpi/icon_close_notification.png",
  "java/res/drawable-mdpi/icon_error_notification.png",
  "java/res/drawable-mdpi/icon_validated_notification.png",
  "java/res/drawable-mdpi/icon_warning_notification.png",
  "java/res/drawable-mdpi/incognito_simple.png",
  "java/res/drawable-mdpi/incognito_splash.png",
  "java/res/drawable-mdpi/location_bar_incognito_badge.png",
  "java/res/drawable-mdpi/modern_location_bar.9.png",
  "java/res/drawable-mdpi/notification_header.png",
  "java/res/drawable-mdpi/notification_header_error.png",
  "java/res/drawable-mdpi/notification_header_normal.png",
  "java/res/drawable-mdpi/notification_header_warning.png",
  "java/res/drawable-mdpi/notification_icon.png",
  "java/res/drawable-mdpi/omnibox_https_valid.png",
  "java/res/drawable-mdpi/plane_small.png",
  "java/res/drawable-mdpi/plus.png",
  "java/res/drawable-mdpi/rewards_settings.png",
  "java/res/drawable-mdpi/search_engine_bing.png",
  "java/res/drawable-mdpi/search_engine_duckduckgo.png",
  "java/res/drawable-mdpi/search_engine_google.png",
  "java/res/drawable-mdpi/search_engine_qwant.png",
  "java/res/drawable-mdpi/search_engine_startpage.png",
  "java/res/drawable-mdpi/settings_desktop_mode.png",
  "java/res/drawable-mdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-mdpi/share_activity_background.png",
  "java/res/drawable-mdpi/share_icon.png",
  "java/res/drawable-mdpi/shortcut_incognito.png",
  "java/res/drawable-mdpi/slide_down.png",
  "java/res/drawable-mdpi/slide_up.png",
  "java/res/drawable-mdpi/smiley_happy.png",
  "java/res/drawable-mdpi/smiley_neutral.png",
  "java/res/drawable-mdpi/smiley_sad.png",
  "java/res/drawable-mdpi/uphold_green.png",
  "java/res/drawable-mdpi/uphold_white.png",
  "java/res/drawable-mdpi/verified_creator_large.png",
  "java/res/drawable-mdpi/verified_disclosure.png",
  "java/res/drawable-mdpi/yandex.png",
  "java/res/drawable-nodpi/ada.png",
  "java/res/drawable-nodpi/adx.png",
  "java/res/drawable-nodpi/alex_plesovskich.webp",
  "java/res/drawable-nodpi/andre_benz.webp",
  "java/res/drawable-nodpi/atom.png",
  "java/res/drawable-nodpi/bat.png",
  "java/res/drawable-nodpi/bch.png",
  "java/res/drawable-nodpi/bnb.png",
  "java/res/drawable-nodpi/btc.png",
  "java/res/drawable-nodpi/busd.png",
  "java/res/drawable-nodpi/corwin_prescott_beach.webp",
  "java/res/drawable-nodpi/corwin_prescott_canyon.webp",
  "java/res/drawable-nodpi/corwin_prescott_crestone.webp",
  "java/res/drawable-nodpi/corwin_prescott_olympic.webp",
  "java/res/drawable-nodpi/dash.png",
  "java/res/drawable-nodpi/doge.png",
  "java/res/drawable-nodpi/dylan_malval_alps.webp",
  "java/res/drawable-nodpi/dylan_malval_sea.webp",
  "java/res/drawable-nodpi/eng.png",
  "java/res/drawable-nodpi/enj.png",
  "java/res/drawable-nodpi/eos.png",
  "java/res/drawable-nodpi/etc.png",
  "java/res/drawable-nodpi/eth.png",
  "java/res/drawable-nodpi/link.png",
  "java/res/drawable-nodpi/loader0.png",
  "java/res/drawable-nodpi/loader0_orange.png",
  "java/res/drawable-nodpi/ltc.png",
  "java/res/drawable-nodpi/matic.png",
  "java/res/drawable-nodpi/nano.png",
  "java/res/drawable-nodpi/ont.png",
  "java/res/drawable-nodpi/pax.png",
  "java/res/drawable-nodpi/rvn.png",
  "java/res/drawable-nodpi/sora_sagano.webp",
  "java/res/drawable-nodpi/spencer_moore_desert.webp",
  "java/res/drawable-nodpi/spencer_moore_fern.webp",
  "java/res/drawable-nodpi/spencer_moore_lake.webp",
  "java/res/drawable-nodpi/spencer_moore_ocean.webp",
  "java/res/drawable-nodpi/su_san_lee.webp",
  "java/res/drawable-nodpi/trx.png",
  "java/res/drawable-nodpi/tusd.png",
  "java/res/drawable-nodpi/usdc.png",
  "java/res/drawable-nodpi/usdt.png",
  "java/res/drawable-nodpi/vet.png",
  "java/res/drawable-nodpi/xlm.png",
  "java/res/drawable-nodpi/xrp.png",
  "java/res/drawable-nodpi/xtz.png",
  "java/res/drawable-nodpi/xvg.png",
  "java/res/drawable-nodpi/zane_lee.webp",
  "java/res/drawable-nodpi/zec.png",
  "java/res/drawable-nodpi/zil.png",
  "java/res/drawable-nodpi/zrx.png",
  "java/res/drawable-xhdpi/add_funds.png",
  "java/res/drawable-xhdpi/bat_logo.png",
  "java/res/drawable-xhdpi/bat_unverified.png",
  "java/res/drawable-xhdpi/bat_verified.png",
  "java/res/drawable-xhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xhdpi/brave_sync.png",
  "java/res/drawable-xhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xhdpi/btn_bat.png",
  "java/res/drawable-xhdpi/btn_bookmark.png",
  "java/res/drawable-xhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xhdpi/btn_brave.png",
  "java/res/drawable-xhdpi/btn_brave_off.png",
  "java/res/drawable-xhdpi/btn_delete_24dp.png",
  "java/res/drawable-xhdpi/btn_info.png",
  "java/res/drawable-xhdpi/btn_left.png",
  "java/res/drawable-xhdpi/btn_mic.png",
  "java/res/drawable-xhdpi/btn_right.png",
  "java/res/drawable-xhdpi/btn_right_tablet.png",
  "java/res/drawable-xhdpi/btn_star.png",
  "java/res/drawable-xhdpi/btn_star_filled.png",
  "java/res/drawable-xhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xhdpi/btn_toolbar_home.png",
  "java/res/drawable-xhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xhdpi/camera.png",
  "java/res/drawable-xhdpi/changetip_icon.png",
  "java/res/drawable-xhdpi/check.png",
  "java/res/drawable-xhdpi/checkbox.png",
  "java/res/drawable-xhdpi/checkbox_checked.png",
  "java/res/drawable-xhdpi/chevron_right.png",
  "java/res/drawable-xhdpi/chromelogo16.png",
  "java/res/drawable-xhdpi/coin_stack.png",
  "java/res/drawable-xhdpi/coins.png",
  "java/res/drawable-xhdpi/contribute_icon.png",
  "java/res/drawable-xhdpi/copy_paste.png",
  "java/res/drawable-xhdpi/cover_photo.png",
  "java/res/drawable-xhdpi/disclosure.png",
  "java/res/drawable-xhdpi/down_arrow.png",
  "java/res/drawable-xhdpi/duckduckgo.png",
  "java/res/drawable-xhdpi/ecosia.png",
  "java/res/drawable-xhdpi/grant_icon.png",
  "java/res/drawable-xhdpi/group.png",
  "java/res/drawable-xhdpi/header.png",
  "java/res/drawable-xhdpi/ic_chrome.png",
  "java/res/drawable-xhdpi/ic_cross_modal.png",
  "java/res/drawable-xhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xhdpi/icn_frowning_face.png",
  "java/res/drawable-xhdpi/icn_twitch.png",
  "java/res/drawable-xhdpi/icn_twitter.png",
  "java/res/drawable-xhdpi/icn_unverified_alert.png",
  "java/res/drawable-xhdpi/icn_youtube.png",
  "java/res/drawable-xhdpi/icon_close_notification.png",
  "java/res/drawable-xhdpi/icon_error_notification.png",
  "java/res/drawable-xhdpi/icon_validated_notification.png",
  "java/res/drawable-xhdpi/icon_warning_notification.png",
  "java/res/drawable-xhdpi/incognito_simple.png",
  "java/res/drawable-xhdpi/incognito_splash.png",
  "java/res/drawable-xhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xhdpi/modern_location_bar.9.png",
  "java/res/drawable-xhdpi/notification_header.png",
  "java/res/drawable-xhdpi/notification_header_error.png",
  "java/res/drawable-xhdpi/notification_header_normal.png",
  "java/res/drawable-xhdpi/notification_header_warning.png",
  "java/res/drawable-xhdpi/notification_icon.png",
  "java/res/drawable-xhdpi/omnibox_https_valid.png",
  "java/res/drawable-xhdpi/plane_small.png",
  "java/res/drawable-xhdpi/plus.png",
  "java/res/drawable-xhdpi/rewards_settings.png",
  "java/res/drawable-xhdpi/search_engine_bing.png",
  "java/res/drawable-xhdpi/search_engine_duckduckgo.png",
  "java/res/drawable-xhdpi/search_engine_google.png",
  "java/res/drawable-xhdpi/search_engine_qwant.png",
  "java/res/drawable-xhdpi/search_engine_startpage.png",
  "java/res/drawable-xhdpi/settings_desktop_mode.png",
  "java/res/drawable-xhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xhdpi/share_activity_background.png",
  "java/res/drawable-xhdpi/share_icon.png",
  "java/res/drawable-xhdpi/shortcut_incognito.png",
  "java/res/drawable-xhdpi/slide_down.png",
  "java/res/drawable-xhdpi/slide_up.png",
  "java/res/drawable-xhdpi/smiley_happy.png",
  "java/res/drawable-xhdpi/smiley_neutral.png",
  "java/res/drawable-xhdpi/smiley_sad.png",
  "java/res/drawable-xhdpi/uphold_green.png",
  "java/res/drawable-xhdpi/uphold_white.png",
  "java/res/drawable-xhdpi/verified_creator_large.png",
  "java/res/drawable-xhdpi/verified_disclosure.png",
  "java/res/drawable-xhdpi/yandex.png",
  "java/res/drawable-xxhdpi/add_funds.png",
  "java/res/drawable-xxhdpi/bat_logo.png",
  "java/res/drawable-xxhdpi/bat_unverified.png",
  "java/res/drawable-xxhdpi/bat_verified.png",
  "java/res/drawable-xxhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xxhdpi/brave_sync.png",
  "java/res/drawable-xxhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xxhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xxhdpi/btn_bat.png",
  "java/res/drawable-xxhdpi/btn_bookmark.png",
  "java/res/drawable-xxhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xxhdpi/btn_brave.png",
  "java/res/drawable-xxhdpi/btn_brave_off.png",
  "java/res/drawable-xxhdpi/btn_delete_24dp.png",
  "java/res/drawable-xxhdpi/btn_info.png",
  "java/res/drawable-xxhdpi/btn_left.png",
  "java/res/drawable-xxhdpi/btn_mic.png",
  "java/res/drawable-xxhdpi/btn_right.png",
  "java/res/drawable-xxhdpi/btn_right_tablet.png",
  "java/res/drawable-xxhdpi/btn_star.png",
  "java/res/drawable-xxhdpi/btn_star_filled.png",
  "java/res/drawable-xxhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xxhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xxhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xxhdpi/btn_toolbar_home.png",
  "java/res/drawable-xxhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xxhdpi/camera.png",
  "java/res/drawable-xxhdpi/changetip_icon.png",
  "java/res/drawable-xxhdpi/check.png",
  "java/res/drawable-xxhdpi/checkbox.png",
  "java/res/drawable-xxhdpi/checkbox_checked.png",
  "java/res/drawable-xxhdpi/chevron_right.png",
  "java/res/drawable-xxhdpi/chromelogo16.png",
  "java/res/drawable-xxhdpi/coin_stack.png",
  "java/res/drawable-xxhdpi/coins.png",
  "java/res/drawable-xxhdpi/contribute_icon.png",
  "java/res/drawable-xxhdpi/copy_paste.png",
  "java/res/drawable-xxhdpi/cover_photo.png",
  "java/res/drawable-xxhdpi/disclosure.png",
  "java/res/drawable-xxhdpi/duckduckgo.png",
  "java/res/drawable-xxhdpi/ecosia.png",
  "java/res/drawable-xxhdpi/grant_icon.png",
  "java/res/drawable-xxhdpi/group.png",
  "java/res/drawable-xxhdpi/header.png",
  "java/res/drawable-xxhdpi/ic_chrome.png",
  "java/res/drawable-xxhdpi/ic_cross_modal.png",
  "java/res/drawable-xxhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xxhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xxhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xxhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xxhdpi/icn_frowning_face.png",
  "java/res/drawable-xxhdpi/icn_twitch.png",
  "java/res/drawable-xxhdpi/icn_twitter.png",
  "java/res/drawable-xxhdpi/icn_unverified_alert.png",
  "java/res/drawable-xxhdpi/icn_youtube.png",
  "java/res/drawable-xxhdpi/icon_close_notification.png",
  "java/res/drawable-xxhdpi/icon_error_notification.png",
  "java/res/drawable-xxhdpi/icon_validated_notification.png",
  "java/res/drawable-xxhdpi/icon_warning_notification.png",
  "java/res/drawable-xxhdpi/incognito_simple.png",
  "java/res/drawable-xxhdpi/incognito_splash.png",
  "java/res/drawable-xxhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xxhdpi/modern_location_bar.9.png",
  "java/res/drawable-xxhdpi/notification_header.png",
  "java/res/drawable-xxhdpi/notification_header_error.png",
  "java/res/drawable-xxhdpi/notification_header_normal.png",
  "java/res/drawable-xxhdpi/notification_header_warning.png",
  "java/res/drawable-xxhdpi/notification_icon.png",
  "java/res/drawable-xxhdpi/omnibox_https_valid.png",
  "java/res/drawable-xxhdpi/plane_small.png",
  "java/res/drawable-xxhdpi/plus.png",
  "java/res/drawable-xxhdpi/qrcode_dark.png",
  "java/res/drawable-xxhdpi/qrcode_light.png",
  "java/res/drawable-xxhdpi/rewards_settings.png",
  "java/res/drawable-xxhdpi/search_engine_bing.png",
  "java/res/drawable-xxhdpi/search_engine_duckduckgo.png",
  "java/res/drawable-xxhdpi/search_engine_google.png",
  "java/res/drawable-xxhdpi/search_engine_qwant.png",
  "java/res/drawable-xxhdpi/search_engine_startpage.png",
  "java/res/drawable-xxhdpi/settings_desktop_mode.png",
  "java/res/drawable-xxhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xxhdpi/share_activity_background.png",
  "java/res/drawable-xxhdpi/share_icon.png",
  "java/res/drawable-xxhdpi/shortcut_incognito.png",
  "java/res/drawable-xxhdpi/slide_down.png",
  "java/res/drawable-xxhdpi/slide_up.png",
  "java/res/drawable-xxhdpi/smiley_happy.png",
  "java/res/drawable-xxhdpi/smiley_neutral.png",
  "java/res/drawable-xxhdpi/smiley_sad.png",
  "java/res/drawable-xxhdpi/uphold_green.png",
  "java/res/drawable-xxhdpi/uphold_white.png",
  "java/res/drawable-xxhdpi/verified_creator_large.png",
  "java/res/drawable-xxhdpi/verified_disclosure.png",
  "java/res/drawable-xxhdpi/yandex.png",
  "java/res/drawable-xxxhdpi/add_funds.png",
  "java/res/drawable-xxxhdpi/bat_logo.png",
  "java/res/drawable-xxxhdpi/bat_unverified.png",
  "java/res/drawable-xxxhdpi/bat_verified.png",
  "java/res/drawable-xxxhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xxxhdpi/brave_sync.png",
  "java/res/drawable-xxxhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xxxhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xxxhdpi/btn_bat.png",
  "java/res/drawable-xxxhdpi/btn_bookmark.png",
  "java/res/drawable-xxxhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xxxhdpi/btn_brave.png",
  "java/res/drawable-xxxhdpi/btn_brave_off.png",
  "java/res/drawable-xxxhdpi/btn_delete_24dp.png",
  "java/res/drawable-xxxhdpi/btn_info.png",
  "java/res/drawable-xxxhdpi/btn_left.png",
  "java/res/drawable-xxxhdpi/btn_mic.png",
  "java/res/drawable-xxxhdpi/btn_right.png",
  "java/res/drawable-xxxhdpi/btn_right_tablet.png",
  "java/res/drawable-xxxhdpi/btn_star.png",
  "java/res/drawable-xxxhdpi/btn_star_filled.png",
  "java/res/drawable-xxxhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xxxhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xxxhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xxxhdpi/btn_toolbar_home.png",
  "java/res/drawable-xxxhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xxxhdpi/camera.png",
  "java/res/drawable-xxxhdpi/changetip_icon.png",
  "java/res/drawable-xxxhdpi/check.png",
  "java/res/drawable-xxxhdpi/checkbox.png",
  "java/res/drawable-xxxhdpi/checkbox_checked.png",
  "java/res/drawable-xxxhdpi/chromelogo16.png",
  "java/res/drawable-xxxhdpi/coin_stack.png",
  "java/res/drawable-xxxhdpi/coins.png",
  "java/res/drawable-xxxhdpi/contribute_icon.png",
  "java/res/drawable-xxxhdpi/copy_paste.png",
  "java/res/drawable-xxxhdpi/cover_photo.png",
  "java/res/drawable-xxxhdpi/disclosure.png",
  "java/res/drawable-xxxhdpi/duckduckgo.png",
  "java/res/drawable-xxxhdpi/ecosia.png",
  "java/res/drawable-xxxhdpi/grant_icon.png",
  "java/res/drawable-xxxhdpi/group.png",
  "java/res/drawable-xxxhdpi/header.png",
  "java/res/drawable-xxxhdpi/ic_chrome.png",
  "java/res/drawable-xxxhdpi/ic_cross_modal.png",
  "java/res/drawable-xxxhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xxxhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xxxhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xxxhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xxxhdpi/icn_frowning_face.png",
  "java/res/drawable-xxxhdpi/icn_twitch.png",
  "java/res/drawable-xxxhdpi/icn_twitter.png",
  "java/res/drawable-xxxhdpi/icn_unverified_alert.png",
  "java/res/drawable-xxxhdpi/icn_youtube.png",
  "java/res/drawable-xxxhdpi/icon_close_notification.png",
  "java/res/drawable-xxxhdpi/icon_error_notification.png",
  "java/res/drawable-xxxhdpi/icon_validated_notification.png",
  "java/res/drawable-xxxhdpi/icon_warning_notification.png",
  "java/res/drawable-xxxhdpi/incognito_simple.png",
  "java/res/drawable-xxxhdpi/incognito_splash.png",
  "java/res/drawable-xxxhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xxxhdpi/notification_header.png",
  "java/res/drawable-xxxhdpi/notification_header_error.png",
  "java/res/drawable-xxxhdpi/notification_header_normal.png",
  "java/res/drawable-xxxhdpi/notification_header_warning.png",
  "java/res/drawable-xxxhdpi/notification_icon.png",
  "java/res/drawable-xxxhdpi/omnibox_https_valid.png",
  "java/res/drawable-xxxhdpi/plane_small.png",
  "java/res/drawable-xxxhdpi/plus.png",
  "java/res/drawable-xxxhdpi/qrcode_dark.png",
  "java/res/drawable-xxxhdpi/qrcode_light.png",
  "java/res/drawable-xxxhdpi/rewards_settings.png",
  "java/res/drawable-xxxhdpi/search_engine_startpage.png",
  "java/res/drawable-xxxhdpi/settings_desktop_mode.png",
  "java/res/drawable-xxxhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xxxhdpi/share_activity_background.png",
  "java/res/drawable-xxxhdpi/share_icon.png",
  "java/res/drawable-xxxhdpi/shortcut_incognito.png",
  "java/res/drawable-xxxhdpi/slide_down.png",
  "java/res/drawable-xxxhdpi/slide_up.png",
  "java/res/drawable-xxxhdpi/smiley_happy.png",
  "java/res/drawable-xxxhdpi/smiley_neutral.png",
  "java/res/drawable-xxxhdpi/smiley_sad.png",
  "java/res/drawable-xxxhdpi/uphold_green.png",
  "java/res/drawable-xxxhdpi/uphold_white.png",
  "java/res/drawable-xxxhdpi/verified_creator_large.png",
  "java/res/drawable-xxxhdpi/verified_disclosure.png",
  "java/res/drawable-xxxhdpi/yandex.png",
  "java/res/drawable/ac_radio_button_normal.xml",
  "java/res/drawable/ac_radio_button_selected.xml",
  "java/res/drawable/ac_radio_button_selector.xml",
  "java/res/drawable/ac_radio_group_bg.xml",
  "java/res/drawable/ac_text_selector.xml",
  "java/res/drawable/ads_custom_notification_border.xml",
  "java/res/drawable/bat_ads_close_button.xml",
  "java/res/drawable/bat_ads_logo_button.xml",
  "java/res/drawable/bat_panel_gradient.xml",
  "java/res/drawable/bat_rewards_summary_gradient.xml",
  "java/res/drawable/binance_edittext.xml",
  "java/res/drawable/binance_radio_button_selector.xml",
  "java/res/drawable/blue_rounded_button.xml",
  "java/res/drawable/blue_rounded_holo_button.xml",
  "java/res/drawable/brave_badge_rewards_background_large.xml",
  "java/res/drawable/brave_badge_rewards_background_small.xml",
  "java/res/drawable/brave_badge_shields_background_large.xml",
  "java/res/drawable/brave_badge_shields_background_small.xml",
  "java/res/drawable/brave_checkbox.xml",
  "java/res/drawable/brave_gradient_shadow.xml",
  "java/res/drawable/brave_menu_bookmarks.xml",
  "java/res/drawable/brave_menu_downloads.xml",
  "java/res/drawable/brave_menu_exit.xml",
  "java/res/drawable/brave_menu_history.xml",
  "java/res/drawable/brave_menu_new_private_tab.xml",
  "java/res/drawable/brave_menu_recent_tabs.xml",
  "java/res/drawable/brave_menu_rewards.xml",
  "java/res/drawable/brave_menu_set_as_default.xml",
  "java/res/drawable/brave_menu_settings.xml",
  "java/res/drawable/brave_modern_toolbar_text_box_background.xml",
  "java/res/drawable/brave_new_group_tab.xml",
  "java/res/drawable/brave_rewards_circle.xml",
  "java/res/drawable/brave_rewards_not_verified_rectangle.xml",
  "java/res/drawable/brave_rewards_onboarding_default.xml",
  "java/res/drawable/brave_rewards_onboarding_selected.xml",
  "java/res/drawable/brave_rewards_onboarding_selector.xml",
  "java/res/drawable/brave_rewards_rectangle.xml",
  "java/res/drawable/brave_rewards_welcome_bg.xml",
  "java/res/drawable/brave_stats_radio_button_normal.xml",
  "java/res/drawable/brave_stats_radio_button_selected.xml",
  "java/res/drawable/brave_stats_radio_button_selector.xml",
  "java/res/drawable/brave_stats_radio_group_bg.xml",
  "java/res/drawable/brave_stats_rounded_bg.xml",
  "java/res/drawable/brave_stats_ui_empty_bg.xml",
  "java/res/drawable/brave_sync_btn.xml",
  "java/res/drawable/brave_sync_cover_general.xml",
  "java/res/drawable/brave_sync_image_btn.xml",
  "java/res/drawable/brave_sync_qr_rounded.xml",
  "java/res/drawable/brave_sync_toggle_off_btn_left.xml",
  "java/res/drawable/brave_sync_toggle_off_btn_right.xml",
  "java/res/drawable/brave_sync_toggle_on_btn_left.xml",
  "java/res/drawable/brave_sync_toggle_on_btn_right.xml",
  "java/res/drawable/brave_sync_top_rounded.xml",
  "java/res/drawable/brave_sync_warning.xml",
  "java/res/drawable/circular_progress.xml",
  "java/res/drawable/default_indicator.xml",
  "java/res/drawable/ic_accessibility.xml",
  "java/res/drawable/ic_add.xml",
  "java/res/drawable/ic_addresses.xml",
  "java/res/drawable/ic_appearance.xml",
  "java/res/drawable/ic_arrow_drop_down_white.xml",
  "java/res/drawable/ic_arrow_forward.xml",
  "java/res/drawable/ic_back.xml",
  "java/res/drawable/ic_bg_video_playback.xml",
  "java/res/drawable/ic_binance.xml",
  "java/res/drawable/ic_brave.xml",
  "java/res/drawable/ic_brave_logo.xml",
  "java/res/drawable/ic_checkbox_filled.xml",
  "java/res/drawable/ic_checkbox_outline.xml",
  "java/res/drawable/ic_chevron_left.xml",
  "java/res/drawable/ic_chevron_right.xml",
  "java/res/drawable/ic_clock.xml",
  "java/res/drawable/ic_closing_all_closes_brave.xml",
  "java/res/drawable/ic_custom_tabs.xml",
  "java/res/drawable/ic_downloads.xml",
  "java/res/drawable/ic_help.xml",
  "java/res/drawable/ic_help_filled.xml",
  "java/res/drawable/ic_homepage.xml",
  "java/res/drawable/ic_icon_bat_eta.xml",
  "java/res/drawable/ic_info.xml",
  "java/res/drawable/ic_languages.xml",
  "java/res/drawable/ic_more_horiz.xml",
  "java/res/drawable/ic_new_tab_page.xml",
  "java/res/drawable/ic_notification.xml",
  "java/res/drawable/ic_onboarding_graphic_android_brave_ads.xml",
  "java/res/drawable/ic_onboarding_graphic_auto_contribute.xml",
  "java/res/drawable/ic_onboarding_graphic_bat_ecosystem.xml",
  "java/res/drawable/ic_onboarding_graphic_bat_schedule.xml",
  "java/res/drawable/ic_onboarding_graphic_cashback.xml",
  "java/res/drawable/ic_onboarding_graphic_completed.xml",
  "java/res/drawable/ic_onboarding_graphic_tipping.xml",
  "java/res/drawable/ic_password.xml",
  "java/res/drawable/ic_payment_methods.xml",
  "java/res/drawable/ic_phone.xml",
  "java/res/drawable/ic_privacy_reports.xml",
  "java/res/drawable/ic_rate.xml",
  "java/res/drawable/ic_rewards.xml",
  "java/res/drawable/ic_search_vector.xml",
  "java/res/drawable/ic_setbraveasdefault.xml",
  "java/res/drawable/ic_setbraveasdefault_dark.xml",
  "java/res/drawable/ic_share.xml",
  "java/res/drawable/ic_share_white.xml",
  "java/res/drawable/ic_shield_done_filled.xml",
  "java/res/drawable/ic_shield_done_filled_20dp.xml",
  "java/res/drawable/ic_site_settings.xml",
  "java/res/drawable/ic_sort.xml",
  "java/res/drawable/ic_spot_graphic.xml",
  "java/res/drawable/ic_spot_graphic_dark.xml",
  "java/res/drawable/ic_sync.xml",
  "java/res/drawable/ic_thank_you.xml",
  "java/res/drawable/ic_toggle_down.xml",
  "java/res/drawable/ic_toggle_up.xml",
  "java/res/drawable/ic_wallet_add.xml",
  "java/res/drawable/ic_warning_circle.xml",
  "java/res/drawable/image_credit_rounded_shape.xml",
  "java/res/drawable/modern_toolbar_background_grey_end_segment.xml",
  "java/res/drawable/ntp_widget_indicator_bg.xml",
  "java/res/drawable/orange_rounded_button.xml",
  "java/res/drawable/plain_checkbox.xml",
  "java/res/drawable/progress_indeterminate.xml",
  "java/res/drawable/progress_indeterminate_orange.xml",
  "java/res/drawable/publisher_favicon_background.xml",
  "java/res/drawable/radio_button_holo_bg.xml",
  "java/res/drawable/radio_button_selected_bg.xml",
  "java/res/drawable/radiobutton_background.xml",
  "java/res/drawable/rate_feedback_background.xml",
  "java/res/drawable/rect_round_corners_12.xml",
  "java/res/drawable/rect_up_round_corners_12.xml",
  "java/res/drawable/rewards_button_orange.xml",
  "java/res/drawable/rewards_button_purple_border.xml",
  "java/res/drawable/rewards_button_summary.xml",
  "java/res/drawable/rewards_image_button.xml",
  "java/res/drawable/rounded_corners.xml",
  "java/res/drawable/rounded_filled.xml",
  "java/res/drawable/rounded_filled_binance.xml",
  "java/res/drawable/rounded_holo_button.xml",
  "java/res/drawable/rounded_shape.xml",
  "java/res/drawable/rounded_white_bg.xml",
  "java/res/drawable/selected_indicator.xml",
  "java/res/drawable/shields_tooltip_background_1.xml",
  "java/res/drawable/shields_tooltip_background_2.xml",
  "java/res/drawable/sync_icon.xml",
  "java/res/drawable/tip_amount.xml",
  "java/res/drawable/transparent_bg_bordered.xml",
  "java/res/drawable/wallet_disconnected_button.xml",
  "java/res/drawable/wallet_verify_button.xml",
  "java/res/drawable/white_rounded_holo_button.xml",
  "java/res/font/poppins_light.ttf",
  "java/res/font/poppins_medium.ttf",
  "java/res/layout-land/brave_rewards_site_banner.xml",
  "java/res/layout-land/verify_wallet_activity.xml",
  "java/res/layout/activity_ntp_widget_stack.xml",
  "java/res/layout/activity_onboarding.xml",
  "java/res/layout/activity_p3a_onboarding.xml",
  "java/res/layout/activity_set_default_browser.xml",
  "java/res/layout/binance_deposit_item.xml",
  "java/res/layout/binance_deposit_layout.xml",
  "java/res/layout/binance_spinner_dropdown_item.xml",
  "java/res/layout/binance_spinner_item.xml",
  "java/res/layout/binance_summary_item.xml",
  "java/res/layout/bottom_control_container.xml",
  "java/res/layout/bottom_toolbar.xml",
  "java/res/layout/bottom_toolbar_browsing.xml",
  "java/res/layout/bottom_toolbar_menu_button.xml",
  "java/res/layout/bottom_toolbar_tab_switcher.xml",
  "java/res/layout/brave_ads_custom_notification.xml",
  "java/res/layout/brave_ads_existing_user_dialog_layout.xml",
  "java/res/layout/brave_ads_new_user_dialog_layout.xml",
  "java/res/layout/brave_bookmark_toolbar.xml",
  "java/res/layout/brave_bottom_new_tab_button.xml",
  "java/res/layout/brave_custom_tabs_toolbar.xml",
  "java/res/layout/brave_ddg_offer_link.xml",
  "java/res/layout/brave_dialog_preference.xml",
  "java/res/layout/brave_rewards_auto_contrib.xml",
  "java/res/layout/brave_rewards_donation_sent.xml",
  "java/res/layout/brave_rewards_onboarding_ac_layout.xml",
  "java/res/layout/brave_rewards_onboarding_item_layout.xml",
  "java/res/layout/brave_rewards_onboarding_layout.xml",
  "java/res/layout/brave_rewards_onboarding_modal.xml",
  "java/res/layout/brave_rewards_opt_in_layout.xml",
  "java/res/layout/brave_rewards_panel.xml",
  "java/res/layout/brave_rewards_panel_grant.xml",
  "java/res/layout/brave_rewards_panel_header.xml",
  "java/res/layout/brave_rewards_reset_tab_content.xml",
  "java/res/layout/brave_rewards_site_banner.xml",
  "java/res/layout/brave_rewards_spinnner_item.xml",
  "java/res/layout/brave_rewards_spinnner_item_dropdown.xml",
  "java/res/layout/brave_rewards_welcome_layout.xml",
  "java/res/layout/brave_set_default_browser_dialog.xml",
  "java/res/layout/brave_shields_main_layout.xml",
  "java/res/layout/brave_shields_option_layout.xml",
  "java/res/layout/brave_shields_secondary_layout.xml",
  "java/res/layout/brave_shields_switcher.xml",
  "java/res/layout/brave_shields_thank_you_layout.xml",
  "java/res/layout/brave_shields_toggle_layout.xml",
  "java/res/layout/brave_shields_tooltip_layout.xml",
  "java/res/layout/brave_stats_bottom_sheet.xml",
  "java/res/layout/brave_stats_layout.xml",
  "java/res/layout/brave_stats_pager_layout.xml",
  "java/res/layout/brave_stats_share_layout.xml",
  "java/res/layout/brave_sync_add_laptop.xml",
  "java/res/layout/brave_sync_add_mobile.xml",
  "java/res/layout/brave_sync_device.xml",
  "java/res/layout/brave_sync_done.xml",
  "java/res/layout/brave_sync_layout.xml",
  "java/res/layout/brave_toolbar.xml",
  "java/res/layout/brave_webrtc_policy_preference.xml",
  "java/res/layout/bre_bottom_banner.xml",
  "java/res/layout/crypto_widget_layout.xml",
  "java/res/layout/ddg_offer_layout.xml",
  "java/res/layout/fragment_binance_buy.xml",
  "java/res/layout/fragment_binance_convert.xml",
  "java/res/layout/fragment_binance_deposit.xml",
  "java/res/layout/fragment_binance_summary.xml",
  "java/res/layout/fragment_brave_ads_onboarding.xml",
  "java/res/layout/fragment_brave_rewards_onboarding.xml",
  "java/res/layout/fragment_cross_promotional_modal_dialog.xml",
  "java/res/layout/fragment_crypto_widget_bottom_sheet_dialog.xml",
  "java/res/layout/fragment_onboarding_v2.xml",
  "java/res/layout/fragment_qr_code_share.xml",
  "java/res/layout/fragment_rate_dialog.xml",
  "java/res/layout/fragment_search_engine_onboarding.xml",
  "java/res/layout/fragment_troubleshooting_onboarding.xml",
  "java/res/layout/highlight_layout.xml",
  "java/res/layout/icon_row_menu_footer.xml",
  "java/res/layout/location_status_incognito_badge.xml",
  "java/res/layout/menu_separator.xml",
  "java/res/layout/new_tab_page_incognito.xml",
  "java/res/layout/new_tab_page_layout.xml",
  "java/res/layout/ntp_bottom_sheet.xml",
  "java/res/layout/ntp_non_disruptive_banner.xml",
  "java/res/layout/ntp_widget_list_item_layout.xml",
  "java/res/layout/qa_code_check.xml",
  "java/res/layout/qa_command_line.xml",
  "java/res/layout/radio_button_group_ens_resolve_method_preference.xml",
  "java/res/layout/radio_button_group_unstoppable_domains_resolve_method_preference.xml",
  "java/res/layout/report_broken_site_layout.xml",
  "java/res/layout/toolbar_space.xml",
  "java/res/layout/top_sites_layout.xml",
  "java/res/layout/tracker_item_layout.xml",
  "java/res/layout/uphold_login_popup_window.xml",
  "java/res/layout/user_wallet_activity.xml",
  "java/res/layout/verify_wallet_activity.xml",
  "java/res/layout/web_notification_big_brave_ads.xml",
  "java/res/layout/web_notification_brave_ads.xml",
  "java/res/layout/web_notification_icon_frame_brave.xml",
  "java/res/menu/exit_settings_menu.xml",
  "java/res/menu/new_tab_menu.xml",
  "java/res/menu/ntp_widget_menu.xml",
  "java/res/values-h380dp/dimens.xml",
  "java/res/values-h500dp/dimens.xml",
  "java/res/values-h568dp/dimens.xml",
  "java/res/values-h730dp/dimens.xml",
  "java/res/values-h748dp/dimens.xml",
  "java/res/values-h765dp/dimens.xml",
  "java/res/values-h820dp/dimens.xml",
  "java/res/values-hdpi/brave_dimens.xml",
  "java/res/values-night/brave_colors.xml",
  "java/res/values-sw600dp/brave_dimens.xml",
  "java/res/values-v21/brave_styles.xml",
  "java/res/values-xhdpi/brave_dimens.xml",
  "java/res/values-xxhdpi/brave_dimens.xml",
  "java/res/values/array.xml",
  "java/res/values/brave_attrs.xml",
  "java/res/values/brave_colors.xml",
  "java/res/values/brave_dimens.xml",
  "java/res/values/brave_ids.xml",
  "java/res/values/brave_styles.xml",
  "java/res/values/brave_values.xml",
  "java/res/xml/appearance_preferences.xml",
  "java/res/xml/background_images_preferences.xml",
  "java/res/xml/brave_download_preferences.xml",
  "java/res/xml/brave_license_preferences.xml",
  "java/res/xml/brave_main_preferences.xml",
  "java/res/xml/brave_privacy_preferences.xml",
  "java/res/xml/brave_rewards_debug_preferences.xml",
  "java/res/xml/brave_rewards_preferences.xml",
  "java/res/xml/brave_search_engines_preferences.xml",
  "java/res/xml/brave_stats_preferences.xml",
  "java/res/xml/brave_theme_preferences.xml",
  "java/res/xml/brave_webrtc_policy_preferences.xml",
  "java/res/xml/clear_browsing_data_preferences_tab.xml",
  "java/res/xml/desktop_mode_preferences.xml",
  "java/res/xml/developer_preferences.xml",
  "java/res/xml/ens_preferences.xml",
  "java/res/xml/legal_information_preferences.xml",
  "java/res/xml/play_yt_video_in_browser_preferences.xml",
  "java/res/xml/qa_preferences.xml",
  "java/res/xml/unstoppable_domains_preferences.xml",
  "java/res/xml/use_custom_tabs_brave_preference.xml",
]

brave_components_browser_ui_site_settings_android_java_resources = [ "//brave/components/browser_ui/site_settings/android/java/res/xml/brave_site_settings_preferences.xml" ]
